# SkyGraph

./: CMakeLists.txt  main.cpp
Assets/source/: Untitled.mtl  model.gltf
Scripts/CameraMover/: CameraMover.cpp  CameraMover.hpp
Scripts/Loader/: Loader.hpp
Scripts/RuntimeColorChoise/: ColorChoise.cpp  ColorChoise.hpp
Scripts/TransMover/: TransMover.cpp  TransMover.hpp
SkyGraph/assets/Shaders/Lit/: FragShader.glsl  VertShader.glsl
SkyGraph/assets/Shaders/Unlit/: UnlitFragShader.glsl  UnlitVertShader.glsl
SkyGraph/include/: Camera.hpp  Destroy.hpp  DirectionLight.hpp  LightSource.hpp  LitMat.hpp  Material-struct.hpp  Material.hpp  PointLight.hpp  Shader.hpp  SkyGraph.hpp  SpotLight.hpp  Texture.hpp  Transformable.hpp  UnlitMat.hpp
SkyGraph/src/: Camera.cpp  DirectionLight.cpp  LightSource.cpp  LitMat.cpp  Material.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Shader.cpp  SourceLight.cpp  SpotLight.cpp  Texture.cpp  Transformable.cpp
assets/shaders/Lit/: FragShader.glsl
include/: Camera.hpp  Component.hpp  DirectionLight.hpp  Input.hpp  LightSource.hpp  LitMat.hpp  Material.hpp  Mesh.hpp  Model.hpp  Object.hpp  PointLight.hpp  Shader.hpp  SkyGraph.hpp  SpotLight.hpp  Texture.hpp  Time.hpp  Transformable.hpp  UnlitMat.hpp
scripts/CameraMover/: CameraMover.cpp  CameraMover.hpp
scripts/Loader/: Loader.cpp
scripts/TransMover/: TransMover.cpp  TransMover.hpp
src/: Camera.cpp  Component.cpp  DirectionLight.cpp  Input.cpp  LightSource.cpp  LitMat.cpp  Material.cpp  Mesh.cpp  Model.cpp  Object.cpp  PointLight.cpp  Shader.cpp  SkyGraph.cpp  SpotLight.cpp  Texture.cpp  Time.cpp  Transformable.cpp  UnlitMat.cpp
